// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should edit app.d.ts file correctly: already_defined 1`] = `
"import \\"kitva/ambient\\";
// See https://kit.svelte.dev/docs/types#app
// for information about these interfaces
declare global {
    namespace App {
        // interface Error {}
        interface Locals {
            validation: import(\\"kitva/presets/ajv/index\\").AppLocal;
        }
        // interface PageData {}
        // interface Platform {}
    }
}

export {};"
`;

exports[`should edit app.d.ts file correctly: already_defined_inline 1`] = `
"import \\"kitva/ambient\\";
// See https://kit.svelte.dev/docs/types#app
// for information about these interfaces
declare global {
    namespace App {
        // interface Error {}
        interface Locals {validation: import(\\"kitva/presets/ajv/index\\").AppLocal;}
        // interface PageData {}
        // interface Platform {}
    }
}

export {};"
`;

exports[`should edit app.d.ts file correctly: default 1`] = `
"import \\"kitva/ambient\\";
// See https://kit.svelte.dev/docs/types#app
// for information about these interfaces
declare global {
    namespace App {
        // interface Error {}
        interface Locals {
	validation: import(\\"kitva/presets/ajv/index\\").AppLocal;
	}
        // interface PageData {}
        // interface Platform {}
    }
}

export {};"
`;

exports[`should edit app.d.ts file correctly: with_locals 1`] = `
"import \\"kitva/ambient\\";
// See https://kit.svelte.dev/docs/types#app
// for information about these interfaces
declare global {
    namespace App {
        // interface Error {}
       interface Locals {
	validation: import(\\"kitva/presets/ajv/index\\").AppLocal;
	
            user: {name:string, id:string}
        }
        // interface PageData {}
        // interface Platform {}
    }
}

export {};"
`;

exports[`should edit app.d.ts file correctly: with_locals_inline 1`] = `
"import \\"kitva/ambient\\";
// See https://kit.svelte.dev/docs/types#app
// for information about these interfaces
declare global {
    namespace App {
        // interface Error {}
       interface Locals {
	validation: import(\\"kitva/presets/ajv/index\\").AppLocal;
	user: {name:string, id:string}}
        // interface PageData {}
        // interface Platform {}
    }
}

export {};"
`;
